Fix Neo and Lombok errors