@@ -65,6 +65,7 @@ dependencies {
     minecraft libs.minecraft
     compileOnly libs.fabricLoader
     compileOnly libs.neoForge
+    compileOnly libs.neoforgeFancymodloaderLoader
 
     compileOnly libs.modMenu
     compileOnly libs.jadeFabric
@@ -81,15 +82,24 @@ dependencies {
     //jarJar libs.balmNeoForge
     //jarJar libs.clothConfigNeoForge
 
+    compileOnly libs.jsr305
+    annotationProcessor libs.jsr305
+
     compileOnly libs.lombok
     annotationProcessor libs.lombok
 
     testImplementation libs.junitJupiter
     testImplementation libs.junitJupiterParams
     testRuntimeOnly libs.junitPlatformLauncher
+
     testImplementation libs.assertjCore
+
     testImplementation libs.mockitoCore
     testImplementation libs.mockitoJunitJupiter
+
+    testCompileOnly libs.jsr305
+    testAnnotationProcessor libs.jsr305
+
     testCompileOnly libs.lombok
     testAnnotationProcessor libs.lombok
 
@@ -99,7 +109,6 @@ dependencies {
 compileJava {
     options.encoding = 'UTF-8'
     options.release = 25
-    options.compilerArgs << '-proc:full'
 }
 
 java {
